fix fullbleed image alignment

--- a/client/scss/article/_wp-content.scss
+++ b/client/scss/article/_wp-content.scss
@@ -80,7 +80,7 @@ img {
 	&.alignnone {
 		display: block;
 
-		.size-full {
+		&.size-full {
 			@include full-bleed(auto);
 			max-width: 100vw;
 		}
